
syntax = "proto3";

package pizza;

service PizzaService {
  rpc Create(CreatePizza) returns (ResData);
  rpc FindAll(Void) returns (ResDataList);
  rpc FindOne(ById) returns (ResData);
  rpc Delete(ById) returns (ResDataNull);
}

message Void {}

message ById {
    int32 id = 1;
}

message IImageOption {
    string type = 1;
    string imageUrl = 2;
    string sm = 3;
}

message PriceOption {
  string sm = 1;
  int32 price = 2;
}


message IToppingOPtion {
  int32 id = 1;
  string name = 2;
  repeated PriceOption prices = 3;
  string imageUrl = 4;
  string createAt = 5;
  string updateAt = 6;
}

message CreatePizza {
  string name = 1;
  string description = 2;
  string price = 3;
  repeated IImageOption imageUrl = 4;
}

message IMeta {
  int32 statusCode = 1;
  string message = 2;
}

message Data {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  repeated IToppingOPtion toppings = 5;
  repeated IImageOption imageUrl = 6;
  string createAt = 7;
  string updateAt = 8;
}

message ResDataList {
  IMeta meta = 1;
  repeated Data data = 2;
}

message ResData {
  IMeta meta = 1;
  Data data = 2;
}

message ResDataNull {
    IMeta meta = 1;
    Void data = 2;
}